Fetcher should blacklist sources that return unexpected errors

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.3.5
    • Affects Version/s: 3.2.4
    • Component/s: Replication
    • None
    • Fully Compatible
    • ALL
    • Hide

      Use the test in SERVER-23164 to see an example of this behavior.

      Show
      Use the test in SERVER-23164 to see an example of this behavior.
    • Repl 13 (04/22/16)
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Currently, if the fetcher query receives a query error from the sync source, the replication code immediately disconnects and reconnects to the same sync source and runs the same query again. Depending on the cause of the error, this can cause an infinite flood of connections to the sync source.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Eric Milkie
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: