SERVER-23567 BackgroundSync blacklists source when it gets invalid BSON error in oplog query response